--- a/modules/response/templates/runbooks/StreamSecurityModifyDbInstance.yaml
+++ b/modules/response/templates/runbooks/StreamSecurityModifyDbInstance.yaml
@@ -1,31 +1,27 @@
 schemaVersion: '0.3'
+description: Modify an RDS DB instance to set its public accessibility.
 assumeRole: '{{ AutomationAssumeRole }}'
-description: >-
-  Modify an RDS DB instance to set its public accessibility.
 parameters:
   AutomationAssumeRole:
+    description: The IAM role that allows Systems Manager Automation to perform the actions on your behalf.
     type: String
-    description: >-
-      The IAM role that allows Systems Manager Automation to perform the actions on your behalf.
   Region:
-    type: String
     description: The AWS region where the RDS instance exists.
-  DBInstanceIdentifier:
     type: String
-    description: The identifier of the RDS DB instance.
   PubliclyAccessible:
-    type: String
     allowedValues:
       - 'True'
       - 'False'
-    description: >-
-      Set to 'True' to make the DB instance publicly accessible, or 'False' to make it private.
+    description: Set to 'True' to make the DB instance publicly accessible, or 'False' to make it private.
+    type: String
+  DBInstanceIdentifier:
+    description: The identifier of the RDS DB instance.
+    type: String
 mainSteps:
   - name: modifyDBInstance
-    action: 'aws:executeScript'
+    action: aws:executeScript
+    isEnd: true
     inputs:
-      Runtime: python3.11
-      Handler: script_handler
       Script: |
         import boto3
 
@@ -36,8 +32,26 @@ mainSteps:
                 resp = rds_client.describe_db_instances(DBInstanceIdentifier=db_instance_identifier)
                 instance = resp['DBInstances'][0]
                 status = instance['DBInstanceStatus']
-                if status != 'available':
-                    raise Exception(f"DB instance '{db_instance_identifier}' is not available (current status: {status}).")
+                if status != "available":
+                    print(f"DB instance '{db_instance_identifier}' is still being created. Waiting until it becomes 'available'...")
+                    waiter = rds_client.get_waiter('db_instance_available')
+                    try:
+                        waiter.wait(
+                            DBInstanceIdentifier=db_instance_identifier,
+                            WaiterConfig={
+                                'Delay': 15,          # seconds between attempts
+                                'MaxAttempts': 60     # total wait time: 15*60 = 900 seconds (15 minutes)
+                            }
+                        )
+                        print(f"DB instance '{db_instance_identifier}' is now available.")
+                    except Exception as we:
+                        raise Exception(f"DB instance '{db_instance_identifier}' did not reach 'available' state in time: {we}")
+                resp = rds_client.describe_db_instances(DBInstanceIdentifier=db_instance_identifier)
+                instance = resp['DBInstances'][0]
+                status = instance['DBInstanceStatus']
+                if status != "available":
+                    raise Exception(f"DB instance '{db_instance_identifier}' is not in 'available' state (current status: {status}).")
+
                 response = rds_client.modify_db_instance(
                     DBInstanceIdentifier=db_instance_identifier,
                     PubliclyAccessible=(publicly_accessible == 'True')
@@ -52,7 +66,9 @@ mainSteps:
             db_instance_identifier = event['DBInstanceIdentifier']
             publicly_accessible = event['PubliclyAccessible']
             modify_db_instance(db_instance_identifier, publicly_accessible, region)
+      Runtime: python3.11
       InputPayload:
-        Region: "{{Region}}"
-        DBInstanceIdentifier: "{{DBInstanceIdentifier}}"
-        PubliclyAccessible: "{{PubliclyAccessible}}"
+        Region: '{{Region}}'
+        PubliclyAccessible: '{{PubliclyAccessible}}'
+        DBInstanceIdentifier: '{{DBInstanceIdentifier}}'
+      Handler: script_handler
